@@ -112,6 +112,11 @@ production.
 * (bug 36641) Patrol page links no longer show on non-existent revisions.
 * (bug 35810) Pages not linked from Special:RecentChanges or Special:NewPages
   are patrollable now.
+* (bug 658) use a <div> instead of a <table> for the table of contents on wiki
+  pages, adjust CSS accordingly. The CSS was carefully crafted to be
+  backwards-compatible in all reasonable cases (for uses of the __TOC__ magic
+  word as well as uses of the #toc CSS id or the .toc CSS class); however,
+  particularly bad abuse of the id or the class can possibly break.
 
 === API changes in 1.22 ===
 * (bug 46626) xmldoublequote parameter was removed. Because of a bug, the
